use single imagetrans folder and add upload imagetrans.zip api
